--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,9 @@
+numpy
+scikit-learn
+python-dotenv
+requests
+joblib
+streamlit
+matplotlib
+pandas>=1.3.0,<2.4.0
 hopsworks==4.7.2
-joblib==1.5.3
-matplotlib==3.10.8
-numpy==2.4.2
-pandas==3.0.0
-python-dotenv==1.2.1
-streamlit==1.54.0
