--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 hopsworks==4.7.2
-joblib==1.5.3
-matplotlib==3.10.8
-numpy==2.4.2
+joblib
+matplotlib
+numpy
 pandas>=1.3.0,<2.4.0
-python-dotenv==1.2.1
-streamlit==1.54.0
+python-dotenv
+streamlit
